--- a/desafios/d018 Professor/index.html
+++ b/desafios/d018 Professor/index.html
@@ -43,8 +43,9 @@
                 
             <article id="skills">
                 <h2>Minhas Skills</h2>
-                <div id="skill-container">
-                    <div class="item">
+                <div id="skill-container"> <!-- Container Skills -->
+
+                    <div class="item"> <!-- Skill 01 -->
                         <div class="info">
                             <span class="nome">
                                 HTML5
@@ -58,7 +59,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 02 -->
                         <div class="info">
                             <span class="nome">
                                 CSS3
@@ -72,7 +73,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 03 -->
                         <div class="info">
                             <span class="nome">
                                 JavaScript
@@ -86,7 +87,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 04 -->
                         <div class="info">
                             <span class="nome">
                                 PHP
@@ -100,7 +101,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 05 -->
                         <div class="info">
                             <span class="nome">
                                 Comunicação
@@ -114,7 +115,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 06 -->
                         <div class="info">
                             <span class="nome">
                                 Trabalho em equipe
@@ -128,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 07 -->
                         <div class="info">
                             <span class="nome">
                                 Adaptabilidade
@@ -142,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> <!-- Skill 08 -->
                         <div class="info">
                             <span class="nome">
                                 Liderança
@@ -161,38 +162,119 @@
 
             <article id="formacao">
                 <h2>Minha Formação</h2>
-                
-                <div id="formacao-container">
-                    <div class="curso">
+                <div id="formacao-container"> <!-- Container Formações -->
+
+                    <div class="curso"> <!-- Formação 01 -->
                         <p class="periodo">1991 - 1994</p>
                         <h3 class="instituicao">Escola Técinca Carioca</h3>
                         <p class="titulacao">Técnico em Informática</p>
                     </div>
 
-                    <div class="curso">
+                    <div class="curso"> <!-- Formação 02 -->
                         <p class="periodo">1995 - 2000</p>
                         <h3 class="instituicao">Escola Técinca Carioca</h3>
                         <p class="titulacao">Técnico em Informática</p>
                     </div>
 
-                    <div class="curso">
+                    <div class="curso"> <!-- Formação 03 -->
                         <p class="periodo">1998 - 2001</p>
                         <h3 class="instituicao">Escola Técinca Carioca</h3>
                         <p class="titulacao">Técnico em Informática</p>
                     </div>
 
                 </div>
-
             </article> <!-- Fim article#formacao -->
 
             <article id="projetos">
                 <h2>Meus Projetos</h2>
+
+                <div id="projeto-container"> <!-- Container de projeto -->
+
+                    <div class="projeto"> <!-- Projeto 01 -->
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 02 -->
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 03 -->
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 04 -->
+                        <img src="imagens/projeto-04-links.jpg" alt="Projeto 4" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 05 -->
+                        <img src="imagens/projeto-05-login.jpg" alt="Projeto 5" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- Projeto 06 -->
+                        <img src="imagens/projeto-06-album.jpg" alt="Projeto 6" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p>Projeto construído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="destricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, animi possimus hic cupiditate nobis voluptatum nam vitae, assumenda iusto deserunt officia aut minima delectus. Aliquam at similique dolore numquam?</p>
+                            </details>
+                        </div>
+                    </div>
+
+                </div>
             </article> <!-- Fim article#projetos -->
         </section>
     </main>
 
     <footer>
-
+        Portfólio desenvolvido por <a href="#">Curso em Vídeo</a> em 2025.
     </footer>
 
     <script src="scripts/script.js"></script>
